--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,6 +6,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: transparent;
+    padding: 120px;
+
 
     .brand-title{
         width: 110px;
@@ -179,7 +181,7 @@ body{
     
     .rect1{
         background-color: orange;
-        width: 100px;
+        width: 10px;
         height: 40px;
         border: 1px solid black;
     }
